--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				</div>
 
 				<div class="diploma n9">
-					<img src="images/fundamentos-js.jpg" alt="fundamentos-js">
+					<img src="images/fundamentos-js.JPG" alt="fundamentos-js">
 				</div>
 			</div>
 		</div>
