update formacion academica and carreras sections

--- a/index.html
+++ b/index.html
@@ -44,10 +44,21 @@
 			</div>
 		</div>
 	</main>
+
+	<section class="carreras">
+		<div class="container">
+			<h2>Mis Carreras</h2>
+			<div class="grid-carreras">
+				<div class="carrera c1">
+					<img src="images/front-end.JPG" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
 	
 	<section class="logros">
 		<div class="container">
-			<h2>Mis Certificados</h2>
+			<h2>Mis Cursos</h2>
 			<div class="diplomas">
 				<div class="diploma n1">
 					<img src="images/desarrollo-web.JPG" alt="desarrollo-web">
@@ -96,7 +107,7 @@
 					<h3>IPM S.A</h3>
 					<p><i class="icon-briefcase"></i>Administrador de Sistemas</p>
 					<p><i class="icon-hammer"></i>Soporte a ERP´s E2I - RSN</p>
-					<p><i class="icon-calendar"></i>Marzo de 2018 - Actualmente</p>
+					<p><i class="icon-calendar"></i>Marzo de 2018 - Marzo de 2019</p>
 				</div>
 
 				<div class="job">
@@ -122,6 +133,20 @@
 			</div>
 		</div>
 	</section>
+
+	<aside class="formacion">
+		<div class="container">
+			<h2>Formación Académica</h2>
+			<div class="estudios">
+				<div class="udec">
+					<img src="images/escudo_udec.PNG" alt="" >
+				</div>
+				<div class="platzi">
+					<img src="images/platzi.PNG" alt="">
+				</div>
+			</div>
+		</div>
+	</aside>
 
 	<article class="social">
 		<div class="container">
