se actualizan los formatos de las fotos udec y platzi

--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
 			<h2>Formación Académica</h2>
 			<div class="estudios">
 				<div class="udec">
-					<img src="images/escudo_udec.PNG" alt="" >
+					<img src="images/escudo_udec.png" alt="" >
 				</div>
 				<div class="platzi">
-					<img src="images/platzi.PNG" alt="">
+					<img src="images/platzi.png" alt="">
 				</div>
 			</div>
 		</div>
