update background colors of sections

--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
 				<div class="diploma n9">
 					<img src="images/fundamentos-js.JPG" alt="fundamentos-js">
 				</div>
+
+				<div class="diploma n10">
+					<img src="images/sass.JPG" alt="sass">
+				</div>
 			</div>
 		</div>
 	</section>
