Revert "Carrusel de imagenes certificados con bootstrap"
This reverts commit 6b985e1bba03f3da6a105836d415fe506e7df8de.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/media.css">
 	<link rel="shortcut icon" href="images/ico.ico" />
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<title>Juan Prieto Rodríguez - Portafolio</title>
 </head>
 <body>
@@ -45,51 +44,61 @@
 			</div>
 		</div>
 	</main>
+
+	<section class="carreras">
+		<div class="container">
+			<h2>Mis Carreras</h2>
+			<div class="grid-carreras">
+				<div class="carrera c1">
+					<img src="images/front-end.JPG" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
 	
 	<section class="logros">
 		<div class="container">
-			<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-				<h2>Mis Cursos</h2>
-				<div class="carousel-inner">
-					<div class="carousel-item active offset-3">
-						<img src="images/desarrollo-web.JPG" class="d-block w-50" alt="desarrollo-web">
-					</div>
-					<div class="carousel-item offset-3">
-						<img src="images/git-github.JPG" class="d-block w-50" alt="github">
-					</div>
-					<div class="carousel-item offset-3">
-						<img src="images/responsive-design.JPG" class="d-block w-50" alt="responsive-design">
-					</div>
-					<div class="carousel-item offset-3">
-						<img src="images/css-grid-layout.JPG" class="d-block w-50" alt="css-grid-layout">
-					</div>
-					<div class="carousel-item offset-3">
-						<img src="images/postcss.JPG" class="d-block w-50" alt="post-css">
-					</div>
-					<div class="carousel-item offset-3">
-						<img src="images/animaciones.JPG" class="d-block w-50" alt="animaciones">
-					</div>
-					<div class="carousel-item offset-3">
-						<img src="images/optimizacion.JPG" class="d-block w-50" alt="optimizacion-sitios-web">
-					</div>
-					<div class="carousel-item offset-3">
-						<img src="images/jquery_a_js.JPG" class="d-block w-50" alt="jquery-javascript">
-					</div>
-					<div class="carousel-item offset-3">
-						<img src="images/fundamentos-js.JPG" class="d-block w-50" alt="fundametos-js">
-					</div>
-					<div class="carousel-item offset-3">
-						<img src="images/sass.JPG" class="d-block w-50" alt="Sass">
-					</div>
+			<h2>Mis Cursos</h2>
+			<div class="diplomas">
+				<div class="diploma n1">
+					<img src="images/desarrollo-web.JPG" alt="desarrollo-web">
 				</div>
-				<a class="carousel-control-prev " href="#carouselExampleControls" role="button" data-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>
+
+				<div class="diploma n2">
+					<img src="images/git-github.JPG" alt="github">
+				</div>
+
+				<div class="diploma n3">
+					<img src="images/responsive-design.JPG" alt="responsive">
+				</div>
+
+				<div class="diploma n4">
+					<img src="images/css-grid-layout.JPG" alt="css grid layout">
+				</div>
+
+				<div class="diploma n5">
+					<img src="images/postcss.JPG" alt="postcss">
+				</div>
+
+				<div class="diploma n6">
+					<img src="images/animaciones.JPG" alt="animaciones">
+				</div>
+
+				<div class="diploma n7">
+					<img src="images/optimizacion.JPG" alt="optimizacion_sitios_web">
+				</div>
+
+				<div class="diploma n8">
+					<img src="images/jquery_a_js.JPG" alt="jquery_a_js">
+				</div>
+
+				<div class="diploma n9">
+					<img src="images/fundamentos-js.JPG" alt="fundamentos-js">
+				</div>
+
+				<div class="diploma n10">
+					<img src="images/sass.JPG" alt="sass">
+				</div>
 			</div>
 		</div>
 	</section>
@@ -162,11 +171,5 @@
 			<p><small><strong>Zipaquirá - Cundinamarca</strong></small></p>
 		</div>
 	</footer>
-
-	<!-- script javascript -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-	</body>
 </body>
 </html>
