feat: update portfolio
Se cambia background,
Se cuadran e insertan diplomas
Se arregla enlace a instagram
Se minifica style.css

--- a/index.html
+++ b/index.html
@@ -6,170 +6,193 @@
 	<meta name="description" content="sitio web de mi portafolio en donde muestro mis conocimientos y logros">
 	<meta name="keywords" content="Ingenieria, tecnologia, desarrollo web, platzi, diseño">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.min.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/media.css">
 	<link rel="shortcut icon" href="images/ico.ico" />
 	<title>Juan Prieto Rodríguez - Portafolio</title>
 </head>
 <body>
-	<header class="hero" role="banner">
-		<div class="container">
-			<h1>Hola!! Me llamo <span>Juan Prieto </span><br>Soy <span>Ingeniero de Sistemas<br></span>Con pasión por el <span>Desarrollo Frontend</span> y las nuevas tecnologías</h1>
-			<div class="imagen">
-				<img src="images/my_photo.jpg" alt="mi-foto">
-			</div>
-		</div>
-	</header>
-	
-	<main class="principal" role="main">
-		<div class="container">
-			<h2>Mis conocimientos</h2>
-			<div class="conocimientos">
-				<div>
-					<img src="images/mssql_logo.png" alt="" width="275">
-				</div>
-
-				<div>
-					<img src="images/crystal-reports.png" alt="" width="200">
-				</div>
-
-				<div>
-					<img src="images/html5.png" alt="" width="200">
-				</div>
-
-				<div>
-					<img src="images/css-logo.png" alt="" width="150">
+	<div class="container-principal">
+		<header class="hero" role="banner">
+			<div class="container">
+				<h1>Hola!! Me llamo <span>Juan Prieto </span><br>Soy <span>Ingeniero de Sistemas<br></span>Con pasión por el <span>Desarrollo Frontend</span> y las nuevas tecnologías</h1>
+				<div class="imagen">
+					<img src="images/my_photo.jpg" alt="mi-foto">
 				</div>
 			</div>
-		</div>
-	</main>
+		</header>
+		<main class="principal" role="main">
+			<div class="container">
+				<h2>Mis conocimientos</h2>
+				<div class="conocimientos">
+					<div>
+						<img src="images/mssql_logo.png" alt="" width="275">
+					</div>
 
-	<section class="carreras">
-		<div class="container">
-			<h2>Mis Carreras</h2>
-			<div class="grid-carreras">
-				<div class="carrera c1">
-					<img src="images/front-end.JPG" alt="">
+					<div>
+						<img src="images/crystal-reports.png" alt="" width="200">
+					</div>
+
+					<div>
+						<img src="images/html5.png" alt="" width="200">
+					</div>
+
+					<div>
+						<img src="images/css-logo.png" alt="" width="150">
+					</div>
 				</div>
 			</div>
-		</div>
-	</section>
-	
-	<section class="logros">
-		<div class="container">
-			<h2>Mis Cursos</h2>
-			<div class="diplomas">
-				<div class="diploma n1">
-					<img src="images/desarrollo-web.JPG" alt="desarrollo-web">
-				</div>
-
-				<div class="diploma n2">
-					<img src="images/git-github.JPG" alt="github">
-				</div>
-
-				<div class="diploma n3">
-					<img src="images/responsive-design.JPG" alt="responsive">
-				</div>
-
-				<div class="diploma n4">
-					<img src="images/css-grid-layout.JPG" alt="css grid layout">
-				</div>
-
-				<div class="diploma n5">
-					<img src="images/postcss.JPG" alt="postcss">
-				</div>
-
-				<div class="diploma n6">
-					<img src="images/animaciones.JPG" alt="animaciones">
-				</div>
-
-				<div class="diploma n7">
-					<img src="images/optimizacion.JPG" alt="optimizacion_sitios_web">
-				</div>
-
-				<div class="diploma n8">
-					<img src="images/jquery_a_js.JPG" alt="jquery_a_js">
-				</div>
-
-				<div class="diploma n9">
-					<img src="images/fundamentos-js.JPG" alt="fundamentos-js">
-				</div>
-
-				<div class="diploma n10">
-					<img src="images/sass.JPG" alt="sass">
+		</main>
+		<section class="carreras">
+			<div class="container">
+				<h2>Mis Carreras</h2>
+				<div class="grid-carreras">
+					<div class="carrera c1">
+						<img src="images/front-end.JPG" alt="">
+					</div>
 				</div>
 			</div>
-		</div>
-	</section>
+		</section>
+		<section class="logros">
+			<div class="container">
+				<h2>Mis Cursos</h2>
+				<div class="diplomas">
+					<div class="diploma n1">
+						<img src="images/desarrollo-web.JPG" alt="desarrollo-web">
+					</div>
 
-	<section class="experiencia">
-		<div class="container">
-			<h2>Mi experiencia laboral</h2>
-			<div class="grid-exp-container">
-				<div class="job">
-					<h3>IPM S.A</h3>
-					<p><i class="icon-briefcase"></i>Administrador de Sistemas</p>
-					<p><i class="icon-hammer"></i>Soporte a ERP´s E2I - RSN</p>
-					<p><i class="icon-calendar"></i>Marzo de 2018 - Marzo de 2019</p>
-				</div>
+					<div class="diploma n2">
+						<img src="images/git-github.JPG" alt="github">
+					</div>
 
-				<div class="job">
-					<h3>UPware Soft S.A.S</h3>
-					<p><i class="icon-briefcase"></i>Ingeniero de Soporte</p>
-					<p><i class="icon-hammer"></i>Desarrollo de Reportes con Crystal Reports y SQl Server</p>
-					<p><i class="icon-calendar"></i>Noviembre de 2016 - Enero de 2018</p>
-				</div>
+					<div class="diploma n3">
+						<img src="images/responsive-design.JPG" alt="responsive">
+					</div>
 
-				<div class="job">
-					<h3>Toyonorte Chia S.A.S</h3>
-					<p><i class="icon-briefcase"></i>Administrador de Sistemas</p>
-					<p><i class="icon-hammer"></i>Soporte a ERP DMS con SQL Server</p>
-					<p><i class="icon-calendar"></i>Noviembre de 2014 - Marzo de 2015</p>
-				</div>
+					<div class="diploma n4">
+						<img src="images/css-grid-layout.JPG" alt="css grid layout">
+					</div>
 
-				<div class="job">
-					<h3>Redetrans S.A</h3>
-					<p><i class="icon-briefcase"></i>Analista WMS</p>
-					<p><i class="icon-hammer"></i>Administración del WMS con SQL Server</p>
-					<p><i class="icon-calendar"></i>Junio de 2014 - Noviembre de 2014</p>
+					<div class="diploma n5">
+						<img src="images/postcss.JPG" alt="postcss">
+					</div>
+
+					<div class="diploma n6">
+						<img src="images/animaciones.JPG" alt="animaciones">
+					</div>
+
+					<div class="diploma n7">
+						<img src="images/optimizacion.JPG" alt="optimizacion_sitios_web">
+					</div>
+
+					<div class="diploma n8">
+						<img src="images/jquery_a_js.JPG" alt="jquery_a_js">
+					</div>
+
+					<div class="diploma n9">
+						<img src="images/fundamentos-js.JPG" alt="fundamentos-js">
+					</div>
+
+					<div class="diploma n10">
+						<img src="images/sass.JPG" alt="sass">
+					</div>
+
+					<div class="diploma n11">
+						<img src="images/less.JPG" alt="sass">
+					</div>
+
+					<div class="diploma n12">
+						<img src="images/bootstrap.JPG" alt="bootstrap">
+					</div>
+
+					<div class="diploma n13">
+						<img src="images/foundation.JPG" alt="foundation">
+					</div>
+
+					<div class="diploma n14">
+						<img src="images/prog_funcional.jpg" alt="prog_funcional">
+					</div>
+
+					<div class="diploma n15">
+						<img src="images/react.jpg" alt="react">
+					</div>
+
+					<div class="diploma n16">
+						<img src="images/webpack.JPG" alt="webpack">
+					</div>
 				</div>
 			</div>
-		</div>
-	</section>
+		</section>
 
-	<aside class="formacion">
-		<div class="container">
-			<h2>Formación Académica</h2>
-			<div class="estudios">
-				<div class="udec">
-					<img src="images/escudo_udec.png" alt="" >
-				</div>
-				<div class="platzi">
-					<img src="images/platzi.png" alt="">
+		<section class="experiencia">
+			<div class="container">
+				<h2>Mi experiencia laboral</h2>
+				<div class="grid-exp-container">
+					<div class="job">
+						<h3>IPM S.A</h3>
+						<p><i class="icon-briefcase"></i>Administrador de Sistemas</p>
+						<p><i class="icon-hammer"></i>Soporte a ERP´s E2I - RSN</p>
+						<p><i class="icon-calendar"></i>Marzo de 2018 - Marzo de 2019</p>
+					</div>
+
+					<div class="job">
+						<h3>UPware Soft S.A.S</h3>
+						<p><i class="icon-briefcase"></i>Ingeniero de Soporte</p>
+						<p><i class="icon-hammer"></i>Desarrollo de Reportes con Crystal Reports y SQl Server</p>
+						<p><i class="icon-calendar"></i>Noviembre de 2016 - Enero de 2018</p>
+					</div>
+
+					<div class="job">
+						<h3>Toyonorte Chia S.A.S</h3>
+						<p><i class="icon-briefcase"></i>Administrador de Sistemas</p>
+						<p><i class="icon-hammer"></i>Soporte a ERP DMS con SQL Server</p>
+						<p><i class="icon-calendar"></i>Noviembre de 2014 - Marzo de 2015</p>
+					</div>
+
+					<div class="job">
+						<h3>Redetrans S.A</h3>
+						<p><i class="icon-briefcase"></i>Analista WMS</p>
+						<p><i class="icon-hammer"></i>Administración del WMS con SQL Server</p>
+						<p><i class="icon-calendar"></i>Junio de 2014 - Noviembre de 2014</p>
+					</div>
 				</div>
 			</div>
-		</div>
-	</aside>
+		</section>
 
-	<article class="social">
-		<div class="container">
-			<h2>Contáctame</h2>
-			<div class="icons">
-				<a href="https://www.facebook.com/juan.prieto.rodriguez.13" target="_blank"><i class="icon-facebook"></i></a>
-				<a href="https://www.instagram.com/jp.r9010/?hl=es-la" target="_blank"><i class="icon-instagram"></i></a>
-				<a href="https://www.linkedin.com/in/juan-prieto-rodriguez-a3b29523/" target="_blank"><i class="icon-linkedin"></i></a>
-				<a href="https://api.whatsapp.com/send?phone=573133908202" target="_blank"><i class="icon-whatsapp"></i></a>
+		<aside class="formacion">
+			<div class="container">
+				<h2>Formación Académica</h2>
+				<div class="estudios">
+					<div class="udec">
+						<img src="images/escudo_udec.png" alt="" >
+					</div>
+					<div class="platzi">
+						<img src="images/platzi.png" alt="">
+					</div>
+				</div>
 			</div>
-		</div>
-	</article>
+		</aside>
 
-	<footer class="datos">
-		<div class="container">
-			<h2>+</h2>
-			<p><small><strong>Correo Electrónico :</strong> gadaf.78@hotmail.com</small></p>
-			<p><small><strong>Zipaquirá - Cundinamarca</strong></small></p>
-		</div>
-	</footer>
+		<article class="social">
+			<div class="container">
+				<h2>Contáctame</h2>
+				<div class="icons">
+					<a href="https://www.facebook.com/juan.prieto.rodriguez.13" target="_blank"><i class="icon-facebook"></i></a>
+					<a href="https://www.instagram.com/juan.prieto.r/" target="_blank"><i class="icon-instagram"></i></a>
+					<a href="https://www.linkedin.com/in/juan-prieto-rodriguez-a3b29523/" target="_blank"><i class="icon-linkedin"></i></a>
+					<a href="https://api.whatsapp.com/send?phone=573133908202" target="_blank"><i class="icon-whatsapp"></i></a>
+				</div>
+			</div>
+		</article>
+
+		<footer class="datos">
+			<div class="container">
+				<h2>+</h2>
+				<p><small><strong>Correo Electrónico :</strong> gadaf.78@hotmail.com</small></p>
+				<p><small><strong>Zipaquirá - Cundinamarca</strong></small></p>
+			</div>
+		</footer>
+	</div>	
 </body>
 </html>
